fix: fixed the input csv file in admin/cdr page svelte and the AdminUserServlet to accept a password