@@ -30,20 +30,28 @@ public class AdminUserServlet extends BaseServlet {
     protected void doPost(HttpServletRequest req, HttpServletResponse res) throws IOException {
         handle(res, () -> {
             Map<String, Object> data = readJson(req);
-            String msisdn = (String) data.get("msisdn");
-            String name = (String) data.get("name");
-            String email = (String) data.get("email");
-            String address = (String) data.get("address");
+            String username  = (String) data.get("username");
+            String password  = (String) data.get("password");
+            String name      = (String) data.get("name");
+            String email     = (String) data.get("email");
+            String address   = (String) data.get("address");
             String birthdate = (String) data.get("birthdate");
-            if (birthdate != null && birthdate.trim().isEmpty()) birthdate = null;
-            
-            // Using our fixed stored function to handle 2-table insertion
-            DB.executeSelect(
-                "SELECT create_customer(?, ?, ?, ?, ?, ?::DATE) as id",
-                msisdn, "customer123", name, email, address, birthdate
+
+            if (password == null || password.isBlank()) {
+                throw new RuntimeException("Password is required");
+            }
+
+            List<Map<String, Object>> result = DB.executeSelect(
+                    "SELECT create_customer(?, ?, ?, ?, ?, ?::DATE) AS id",
+                    username,
+                    password,
+                    name,
+                    email,
+                    address,
+                    birthdate
             );
-            
-            return Map.of("success", true, "message", "Customer created successfully");
+            int newId = ((Number) result.get(0).get("id")).intValue();
+            return Map.of("success", true, "message", "Customer created successfully", "id", newId);
         });
     }
 }
